# theory

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT
.github/workflows/: ci.yaml
examples/: inspect.rs  writer.rs
src/: book.rs  builder.rs  lib.rs  metadata.rs  toc.rs
src/page/: mod.rs  persistence.rs
src/persistence/: kvlist.rs  mod.rs  v1.rs
src/persistence/datablock/: mod.rs  reader.rs  tests.rs  writer.rs
