[package]
name = "theory"
version = "0.0.1"
license = "MIT OR Apache-2.0"
edition = "2021"
homepage = "https://github.com/ayosec/theory/"
repository = "https://github.com/ayosec/theory.git"
description = "Documentation viewer (WIP)"
authors = [ "ayosec@gmail.com" ]

exclude = [ ".git*" ]

[dependencies]
endiannezz = "0.6.5"
flate2 = { version = "1.0.24", optional = true }
leb128 = "0.2.5"
lru = { version = "0.8.1", default-features = false }
num_enum = { version = "0.5.7", default-features = false }
thiserror = "1.0.36"
tinyvec = { version = "1.6.0", features = ["rustc_1_57", "alloc"] }

[dev-dependencies]
clap = { version = "4.0.10", default-features = false, features = ["derive", "std", "usage", "help"] }

[features]
default = ["deflate"]
deflate = ["flate2"]
